src/test/ui/type/ascription/issue-60933.stderr
error: expected one of `!`, `::`, or `;`, found `(`
  --> $DIR/issue-60933.rs:2:43
   |
LL |     let u: usize = std::mem:size_of::<u32>();
   |                            -              ^ expected one of `!`, `::`, or `;` here
   |                            |
   |                            help: maybe write a path separator here: `::`
   |
   = note: `#![feature(type_ascription)]` lets you annotate an expression with a type: `<expr>: <type>`
   = note: for more information, see https://github.com/rust-lang/rust/issues/23416

error: aborting due to previous error

