src/test/ui/type/ascription/issue-60933.rs
fn main() {
    let u: usize = std::mem:size_of::<u32>();
    //~^ ERROR expected one of
}
